[gd_scene load_steps=3 format=3 uid="uid://byn7n5x4vtesj"]

[ext_resource type="PackedScene" uid="uid://cwaf57q1jy301" path="res://scenes/options_menu/option_menu_template.tscn" id="1_c0qp2"]
[ext_resource type="Script" path="res://scripts/options_menu/options/reset_options_manager.gd" id="2_cmxaf"]

[node name="OptionMenuTemplate" instance=ExtResource("1_c0qp2")]

[node name="BackgroundPanel" parent="FullWindow" index="0"]
anchor_bottom = 0.8
script = ExtResource("2_cmxaf")

[node name="TitleLabel" parent="FullWindow/BackgroundPanel" index="0"]
text = "Reset Options"

[node name="ResetCurrentDayButton" type="Button" parent="FullWindow/BackgroundPanel/ButtonsContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Reset current day"

[node name="ResetCurrentMonthButton" type="Button" parent="FullWindow/BackgroundPanel/ButtonsContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Reset current month"

[node name="ResetCurrentYearButton" type="Button" parent="FullWindow/BackgroundPanel/ButtonsContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Reset current year"

[node name="ResetAllButton" type="Button" parent="FullWindow/BackgroundPanel/ButtonsContainer" index="3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Reset all saved progress"

[node name="CloseButton" parent="FullWindow/BackgroundPanel/ButtonsContainer" index="4"]
size_flags_vertical = 3
